[UPGRADE] identify the sectionj of page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Responsive page</title>
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+
+    </header>
+    <!-- MAIN of PAGE  with six section-->
+    <main>
+
+    </main>
+    <!-- FOOTER of PAGE -->
+    <footer>
+        
+    </footer>
 </body>
 </html>
