[UPGRADE]Add second section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
                 </div>
             </div>
         </div>
+
+        <!-- Second section of main  -->
+        <div class="bg-purple">
+            <div class="conteiner">
+                <div class="row">
+                    <div class="col-100">
+                        <div class="content height-600">
+
+                        </div>
+                    </div>
+                    <div class="col-100">
+                        <div class="content bg-white border-radius-25 height-600">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- FOOTER of PAGE -->
     <footer>
