[UPGRADE]Add third section of main page

--- a/index.html
+++ b/index.html
@@ -88,6 +88,35 @@
                 </div>
             </div>
         </div>
+
+        <!-- Third section -->
+        <div class="testimonial">
+            <div class="container">
+                <div class="row">
+                    <div class="col-100">
+                        <div class="content height-300">
+
+                        </div>
+                    </div>
+                    <!-- three card -->
+                    <div class="col-100">
+                        <div class="content border-radius-25 bg-purple height-300">
+
+                        </div>
+                    </div>
+                    <div class="col-100">
+                        <div class="content border-radius-25 bg-purple height-300">
+                            
+                        </div>
+                    </div>
+                    <div class="col-100">
+                        <div class="content border-radius-25 bg-purple height-300">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- FOOTER of PAGE -->
     <footer>
