[UPGRADE] Add footer to page

--- a/index.html
+++ b/index.html
@@ -181,11 +181,36 @@
                 </div>
             </div>
         </div>
-        
+
+        <!-- Sixth section of main -->
+        <div class="bg-purple">
+            <div class="container">
+                <div class="row">
+                    <div class="col-100">
+                        <div class="content txt-center height-300">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptatibus ut nulla quidem modi, debitis exercitationem totam neque recusandae rem nihil deserunt quis dolor voluptates. Placeat expedita eius reiciendis delectus!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- FOOTER of PAGE -->
     <footer>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-100">
+                    <div class="content txt-center height-100">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores officiis ipsam eum quod obcaecati iste, hic recusandae labore pariatur et quo iusto, quasi nulla, omnis cumque repudiandae impedit inventore quae.
+                    </div>
+                </div>
+                <div class="col-100">
+                    <div class="content txt-center height-100">
+                        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
