[UPGRADE]Add class for responsive in fifth section

--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
         <div class="about-us">
             <div class="container">
                 <div class="row">
-                    <div class="col-100">
-                        <div class="content height-600">
+                    <div class="col-100 col-66">
+                        <div class="content height-600 bg-purple">
 
                         </div>
                     </div>
                     
-                    <div class="col-100">
-                        <div class="content height-300">
+                    <div class="col-100 col-33">
+                        <div class="content height-300 bg-purple">
                             
                         </div>
                     </div>
