[UPGRADE]Adjust responsive to second section

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 
         <!-- Second section of main  -->
         <div class="bg-purple">
-            <div class="conteiner">
+            <div class="container">
                 <div class="row">
-                    <div class="col-100">
+                    <div class="col-100 col-50">
                         <div class="content height-600">
 
                         </div>
                     </div>
-                    <div class="col-100">
+                    <div class="col-100 col-50">
                         <div class="content bg-white border-radius-25 height-600">
 
                         </div>
