--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Responsive page</title>
 </head>
 <body>
@@ -13,12 +14,21 @@
             <div class="row">
                 <div class="col-50">
                     <div class="content">
-                        test
+                        <img src="./img/logo.png" alt="logo">
                     </div>
                 </div>
                 <div class="col-50">
-                    <div class="content f-right">
-                        test
+                    <div class="content f-right show">
+                        <i class="fas fa-bars"></i>
+                    </div>
+                    <div class="content hidden">
+                        <ul>
+                            <li><a href="#">Planning</a></li>
+                            <li><a href="#">Tesimonials</a></li>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><span class="btn bg-white">Get Started</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
