[UPGRADE]Add content to first col fo first section

--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
                 <div class="col-100 col-66">
                     <div class="content border-radius-25 bg-blue">
                         <div class="row">
-                            <div class="col-100">
-                                <div class="content bg-white height-300">
-
+                            <div class="col-100 col-50">
+                                <div class="content-col">
+                                    <h2>Get a demo application</h2>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam dignissimos dicta, maxime reiciendis optio molestiae tempora totam natus nesciunt corporis!</p>
+                                    <button class="btn btn-blue"> <i class="fab fa-apple"></i> App Store</button>
                                 </div>
                             </div>
-                            <div class="col-100">
-                                <div class="content bg-white height-300">
-                                    
+                            <div class="col-100 col-50">
+                                <div class="content-col">
+                                    <img src="./img/phone.png" alt="phone">
                                 </div>
                             </div>
                         </div>
