--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- MAIN of PAGE  with six section-->
     <main>
         <!-- first section of main page-->
-        <div class="container">
+        <div class="container padding-top-50 padding-bottom-80">
             <div class="row">
                 <!-- column with another two column inside -->
                 <div class="col-100 col-66">
