[UPGRADE]Add all second section

--- a/index.html
+++ b/index.html
@@ -100,17 +100,30 @@
         </div>
 
         <!-- Second section of main  -->
-        <div class="bg-purple">
+        <div class="bg-purple padding-bottom-80 padding-top-50">
             <div class="container">
                 <div class="row">
                     <div class="col-100 col-50">
-                        <div class="content height-600">
-
+                        <div class="content">
+                            <div class="planning-one">
+                                <img src="img/planning1.png" alt="planning">
+                                <div class="text-planning-one">
+                                    <h2>Strategic Planning</h2>
+                                    <p>
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, harum ut eligendi enim, odio exercitationem, sint impedit fugiat nobis nisi maiores atque? Autem, deserunt. Asperiores repellendus nemo dolore nam illum.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-100 col-50">
-                        <div class="content bg-white border-radius-25 height-600">
-
+                        <div class="content ">
+                            <div class="planning-two bg-white border-radius-25">
+                                <img src="./img/planning2.png" alt="planning">
+                                <h2>App Developement</h2>
+                                <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                                <span class="arrow-down"> <i class="fas fa-arrow-down"></i> </span>
+                            </div>
                         </div>
                     </div>
                 </div>
