[FIX]Adjustwidth to all content img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-50">
-                    <div class="content">
+                    <div class="logo">
                         <img src="./img/logo.png" alt="logo">
                     </div>
                 </div>
@@ -135,24 +135,28 @@
             <div class="container">
                 <div class="row">
                     <div class="col-100">
-                        <div class="content height-300">
-
+                        <div class="content">
+                            <h3>TESTIMONIALS</h3>
+                            <h1>We are committed expert partners</h1>
+                            <p>
+                                We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.
+                            </p>
                         </div>
                     </div>
                     <!-- three card -->
                     <div class="col-100">
-                        <div class="content border-radius-25 bg-purple height-300">
-
+                        <div class="content border-radius-25 bg-purple">
+                            <img src="./img/testimonial1.jpg" alt="testimonial">
                         </div>
                     </div>
                     <div class="col-100">
-                        <div class="content border-radius-25 bg-purple height-300">
-                            
+                        <div class="content border-radius-25 bg-purple">
+                            <img src="./img/testimonial2.jpg" alt="testimonial">
                         </div>
                     </div>
                     <div class="col-100">
-                        <div class="content border-radius-25 bg-purple height-300">
-                            
+                        <div class="content border-radius-25 bg-purple">
+                            <img src="./img/testimonial3.jpg" alt="testimonial">
                         </div>
                     </div>
                 </div>
