[FIX]Add row to column in third section

--- a/index.html
+++ b/index.html
@@ -146,19 +146,65 @@
                     <!-- three card -->
                     <div class="col-100">
                         <div class="content border-radius-25 bg-purple">
-                            <img src="./img/testimonial1.jpg" alt="testimonial">
+                            <div class="row">
+                                <div class="col-100 col-33">
+                                    <div class="user-img">
+                                        <img src="./img/testimonial1.jpg" alt="testimonial">
+                                    </div>
+                                </div>
+                                <div class="col-100 col-66">
+                                    <div class="user">
+                                    <p>
+                                        <span class="marks"><i class="fas fa-quote-left"></i></span> 
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
+                                        <span class="marks"><i class="fas fa-quote-right"></i></span>
+                                    </p> 
+                                    <h3>NAT REYENOLDS</h3>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-100">
                         <div class="content border-radius-25 bg-purple">
-                            <img src="./img/testimonial2.jpg" alt="testimonial">
+                            <div class="row">
+                                <div class="col-100 col-33">
+                                    <div class="user-img">
+                                        <img src="./img/testimonial2.jpg" alt="testimonial">
+                                    </div>
+                                </div>
+                                <div class="col-100 col-66">
+                                    <div class="user">
+                                    <p>
+                                        <span class="marks"><i class="fas fa-quote-left"></i></span> 
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
+                                        <span class="marks"><i class="fas fa-quote-right"></i></span>
+                                    </p> 
+                                    <h3>CELIA ALMEDA</h3>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-100">
                         <div class="content border-radius-25 bg-purple">
-                            <img src="./img/testimonial3.jpg" alt="testimonial">
+                            <div class="row">
+                                <div class="col-100 col-33">
+                                    <div class="user-img">
+                                        <img src="./img/testimonial3.jpg" alt="testimonial">
+                                    </div>
+                                </div>
+                                <div class="col-100 col-66">
+                                    <div class="user">
+                                    <p>
+                                        <span class="marks"><i class="fas fa-quote-left"></i></span> 
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
+                                        <span class="marks"><i class="fas fa-quote-right"></i></span>
+                                    </p> 
+                                    <h3>BOB ROBERTS</h3>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
