[FIX]Add div close tag to thitd section

--- a/index.html
+++ b/index.html
@@ -154,12 +154,13 @@
                                 </div>
                                 <div class="col-100 col-66">
                                     <div class="user">
-                                    <p>
-                                        <span class="marks"><i class="fas fa-quote-left"></i></span> 
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
-                                        <span class="marks"><i class="fas fa-quote-right"></i></span>
-                                    </p> 
-                                    <h3>NAT REYENOLDS</h3>
+                                        <p>
+                                            <span class="marks"><i class="fas fa-quote-left"></i></span> 
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
+                                            <span class="marks"><i class="fas fa-quote-right"></i></span>
+                                        </p> 
+                                        <h3>NAT REYENOLDS</h3>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -174,12 +175,13 @@
                                 </div>
                                 <div class="col-100 col-66">
                                     <div class="user">
-                                    <p>
-                                        <span class="marks"><i class="fas fa-quote-left"></i></span> 
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
-                                        <span class="marks"><i class="fas fa-quote-right"></i></span>
-                                    </p> 
-                                    <h3>CELIA ALMEDA</h3>
+                                        <p>
+                                            <span class="marks"><i class="fas fa-quote-left"></i></span> 
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
+                                            <span class="marks"><i class="fas fa-quote-right"></i></span>
+                                        </p> 
+                                        <h3>CELIA ALMEDA</h3>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -194,12 +196,13 @@
                                 </div>
                                 <div class="col-100 col-66">
                                     <div class="user">
-                                    <p>
-                                        <span class="marks"><i class="fas fa-quote-left"></i></span> 
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
-                                        <span class="marks"><i class="fas fa-quote-right"></i></span>
-                                    </p> 
-                                    <h3>BOB ROBERTS</h3>
+                                        <p>
+                                            <span class="marks"><i class="fas fa-quote-left"></i></span> 
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus laboriosam neque repudiandae dolores impedit ullam eius magni eos quod sapiente culpa, sit fuga hic laborum dolor quidem quaerat nulla? 
+                                            <span class="marks"><i class="fas fa-quote-right"></i></span>
+                                        </p> 
+                                        <h3>BOB ROBERTS</h3>
+                                    </div>
                                 </div>
                             </div>
                         </div>
