[UPGRADE]Add all fifth section

--- a/index.html
+++ b/index.html
@@ -300,18 +300,29 @@
         </div>
 
         <!-- fifth section -->
-        <div class="about-us">
+        <div class="about-us padding-top-50">
             <div class="container">
                 <div class="row">
                     <div class="col-100 col-66">
-                        <div class="content height-600 bg-purple">
-
+                        <div class="text-about">
+                            <h1>About us</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id deserunt, ab maxime dolores sapiente voluptatem minus nostrum fugiat, expedita quam laudantium at inventore voluptatibus voluptas ullam numquam natus. Modi, voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga praesentium, maiores fugiat veniam reiciendis ab tenetur nobis culpa voluptatum, voluptate totam provident eius autem natus nihil unde deleniti tempore atque.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id deserunt, ab maxime dolores sapiente voluptatem minus nostrum fugiat, expedita quam laudantium at inventore voluptatibus voluptas ullam numquam natus. Modi, voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga praesentium, maiores fugiat veniam reiciendis ab tenetur nobis culpa voluptatum, voluptate totam provident eius autem natus nihil unde deleniti tempore atque.
+                            </p>
                         </div>
                     </div>
                     
                     <div class="col-100 col-33">
-                        <div class="content height-300 bg-purple">
-                            
+                        <div class="text-about">
+                            <div class="about-img">
+                                <img class="img-radius" src="./img/about.jpg" alt="about">
+                                <i class="fas fa-quote-left"></i>
+                            </div>
+                            <h3>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h3>
+                            <button class="btn bg-purple"><i class="fab fa-linkedin"> </i> Find me on linkedin</button>
                         </div>
                     </div>
                 </div>
