[UPGRADE]Add last section of main page

--- a/index.html
+++ b/index.html
@@ -330,12 +330,19 @@
         </div>
 
         <!-- Sixth section of main -->
-        <div class="bg-purple">
+        <div class="bg-purple padding-bottom-80">
             <div class="container">
                 <div class="row">
                     <div class="col-100">
-                        <div class="content txt-center height-300">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptatibus ut nulla quidem modi, debitis exercitationem totam neque recusandae rem nihil deserunt quis dolor voluptates. Placeat expedita eius reiciendis delectus!
+                        <div class="text-bottom">
+                            <h3>GET STARTERD</h3>
+                            <h2>Simple, Transparent Pricing</h2>
+                            <h1>It's Free!</h1>
+                            <p>
+                                We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.
+                            </p>
+                            <button class="btn btn-spacing bg-white">Get Started</button>
+                            <h5>Copyright 2021 Boolean &#x22C5; Class XX &#x22C5; <a href="#">Privacy policy</a></h5>
                         </div>
                     </div>
                 </div>
