[UPGRADE]Add footer

--- a/index.html
+++ b/index.html
@@ -352,15 +352,15 @@
     <!-- FOOTER of PAGE -->
     <footer>
         <div class="container">
-            <div class="row">
-                <div class="col-100">
-                    <div class="content txt-center height-100">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores officiis ipsam eum quod obcaecati iste, hic recusandae labore pariatur et quo iusto, quasi nulla, omnis cumque repudiandae impedit inventore quae.
+            <div class="row width-center">
+                <div class="col-100 padding-20">
+                    <div class="text-footer">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores officiis ipsam eum quod obcaecati iste, hic recusandae labore 
                     </div>
                 </div>
-                <div class="col-100">
-                    <div class="content txt-center height-100">
-                        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+                <div class="col-100 padding-20">
+                    <div class="text-footer">
+                        <a href="#">Lorem ipsum</a> dolor sit amet. Lorem ipsum dolor <a href="#">Boolean careers</a>
                     </div>
                 </div>
             </div>
